Add log4j2 config.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=yh
 server.servlet.context-path=/manager
 
 spring.jpa.properties.javax.persistence.validation.mode=none
+
+logging.config= classpath:log4j2.xml
