Update log4j2 config and pom.

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,13 @@
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-core</artifactId>
 	    </dependency>
-        
+
+		<!-- CollectionUtils -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
